<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        >

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

        <TextView
                android:id="@+id/nameTv"
                style="@style/WorkerHeaderItemStyle"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="24dp"

                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/currentTv"
                />

        <TextView
                android:id="@+id/currentTv"
                style="@style/WorkerHeaderItemStyle"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/current"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"

                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintBaseline_toBaselineOf="@+id/nameTv"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

        <TextView
                android:id="@+id/hashrate24hTv"
                style="@style/WorkerHeaderItemStyle"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hashrate24h"
                android:layout_marginEnd="32dp"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBaseline_toBaselineOf="@+id/nameTv"
                />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
